...

class FavouritePhotosController: UIViewController {

    //MARK:- IBOutlets
    @IBOutlet weak var likedPhotosCollectionView: UICollectionView! {
        didSet {
            likedPhotosCollectionView.accessibilityIdentifier = "collectionview--likedPhotosCollectionView"
            likedPhotosCollectionView.registerNib(type: RandomPhotosCollectionCell.self)
        }
    }
    
    //MARK:- Private variables
    private let disposeBag = DisposeBag()
    private var likedPhotos = [[String: String]]()
    
    //MARK:- Lifecycle methods
    override func viewDidLoad() {
        super.viewDidLoad()
        //UI testing
        view.accessibilityIdentifier = "controller--FavouritePhotosController"
        view.backgroundColor         = .black
        
        assignCollectionDelegates()
    }

    override func viewWillAppear(_ animated: Bool) {
...
